@@ -1,5 +1,9 @@
 2005-08-19  Dalibor Topic  <robilad@kaffe.org>
 
+	* replace/ifaddrs_bsd.c: Added missing includes.
+
+2005-08-19  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/thread.c: Added include for rlim_t.
 
 2005-08-19  Dalibor Topic  <robilad@kaffe.org>
